--- a/package.json
+++ b/package.json
@@ -3,8 +3,14 @@
   "version": "1.0.0",
   "description": "Bot para prospecçao de empresas",
   "main": "main.js",
+  "scripts": {
+    "start": "node dist/main.js"
+  },
   "repository": "https://github.com/guilhermewebdev/prospect-bot.git",
   "author": "Guilherme Isaias",
   "license": "MIT",
-  "private": false
+  "private": false,
+  "devDependencies": {
+    "nodemon": "^2.0.6"
+  }
 }
